<resources>
    <string name="app_name">GROUP L</string>
    <string name="plan_description">Plan description</string>
    <string name="testbutton">TestButton</string>
    <string name="button">Button</string>
    <string name="title">Title</string>
    <string name="add_a_plan">Add a plan</string>
    <string name="delete_a_plan">Delete a plan</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="selected_recipes">Selected Recipes</string>
    <string name="create_a_new_meal_plan">Create a new Meal Plan</string>
    <string name="select_a_date_range_mm_dd_yyyy">Select a date range (mm/dd/yyyy)</string>
    <string name="begin">begin</string>
    <string name="end">end</string>
    <string name="choose_recipes">Choose recipes</string>
    <string name="save_plan">Save Plan</string>
    <string name="name">Name</string>
    <string name="addrecipetoplan">TextView</string>
    <string name="textview">TextView</string>
    <string name="plan_name">Plan Name</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="my_recipe_book">My Recipe Book</string>
    <string name="save_changes">Save Changes</string>
    <string name="foodicon">foodIcon</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="add">Add</string>
    <string name="ingreident_name">Ingreident Name</string>
    <string name="back">back</string>
    <string name="recipes">Recipes</string>

</resources>