<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/d838bc104e643b0653022367f5acf677"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/getIngreidentsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:ems="10"
        android:hint="@string/ingreident_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/Add"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/Add"

        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="27dp"
        android:text="@string/add"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@id/getIngreidentsName"
        app:layout_constraintTop_toBottomOf="@id/getRecipeName" />

    <EditText
        android:id="@+id/getRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="156dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/recipe_name"
        app:layout_constraintBottom_toTopOf="@+id/VV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/Save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/save_recipe"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/VV"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:onClick="Bakbtnn"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/DeleteRecipe"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="37dp"
        android:text="@string/delete_recipe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/VV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="114dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/getRecipeName" />
</androidx.constraintlayout.widget.ConstraintLayout>